fixes minor chrome UI issue on mobile

--- a/assets/css/tachyons.plus.css
+++ b/assets/css/tachyons.plus.css
@@ -78,6 +78,10 @@
   white-space: break-spaces;
 }
 
+.break-word {
+  word-break: break-word
+}
+
 .cursive {
   font-family: cursive;
 }
